# lbt

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
examples/config/code/: chatgpt35_exam.yaml  chatgpt35_trgen.yaml  chatgpt35_trgen_debug.yaml  llama-3-70b_exam.yaml  llama-3-70b_trgen.yaml  llama-3-70b_trgen_debug.yaml  llama-3-8b_exam.yaml  llama-3-8b_trgen.yaml  llama-3-8b_trgen_debug.yaml
examples/config/math/: chatgpt35_greedy.yaml  chatgpt35_trgen.yaml  chatgpt4o-mini_exam.yaml  chatgpt4o_greedy.yaml  chatgpt4o_trgen.yaml  llama-3-70b_greedy.yaml  llama-3-70b_trgen.yaml  llama-3-8b_exam.yaml  llama-3-8b_greedy.yaml  llama-3-8b_trgen.yaml  mistral-7b_exam.yaml  mistral-7b_greedy.yaml  mistral-7b_trgen.yaml
lbt/: __init__.py  base.py  exam_maker.py  exam_scorer.py  qa_item.py  test.py
lbt/datasets_adapter/: __init__.py  code_dataset.py  math_dataset.py
lbt/datasets_adapter/apps_utils/: testing_util.py
lbt/datasets_adapter/leetcode_sub/: environment.py  leetcode.py
lbt/datasets_adapter/utils/: add_test_cases.py  clean_leetcode.py  extract_tests.yaml  fetch_leetcode.py  format_leetcode.py  transform_code.py  utils_leetcode.py  utils_llm.py
lbt/models/: __init__.py  base.py
lbt/patch/: lmops-lbtm3.patch
lbt/utils/: __init__.py  log.py  registry.py
scripts/: code_exam.py  exam.py
scripts/code/: prepare_datasets.py  prepare_teaching_datasets.py  search_rationale.py
scripts/math/: prepare_datasets.py  prepare_teaching_dataset.py  search_rationale.py
tests/: test_math_extraction.py  test_ques_similarity_exam_maker.py
